--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
-astro-sdk-python[snowflake,postgres,amazon,google]==1.4.0
-pandas==1.5.2
+astro-sdk-python[amazon,databricks,duckdb,google,postgres,snowflake]==1.5.3
 
-duckdb==0.7.0
