--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 astro-sdk-python[amazon,databricks,duckdb,google,postgres,snowflake]==1.5.3
 
+apache-airflow-providers-amazon==8.3.1
+astronomer-providers==1.17.3
