--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
 astro-sdk-python[amazon,databricks,duckdb,google,postgres,snowflake]==1.5.3
 
+apache-airflow-providers-telegram==4.3.1
+apache-airflow-providers-amazon==8.17.0
+apache-airflow-providers-google==10.14.0
+pendulum==3.0.0
